[Fix][Groups] #19532 : adding top-spacing classes

--- a/layouts/_pages-layouts.scss
+++ b/layouts/_pages-layouts.scss
@@ -147,6 +147,12 @@
 .top-spacing-twice{
 	margin-top: 10px !important;
 }
+.top-spacing-three{
+	margin-top: 15px !important;
+}
+.top-spacing-four{
+	margin-top: 20px !important;
+}
 
 .left-spacing{
 	margin-left: 10px !important;
